View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033011 | Open CASCADE | OCCT:Data Exchange | public | 2022-06-09 17:04 | 2022-07-10 12:09 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | immediate | Severity | block | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.7.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0033011: Data Exchange - Backward compatibility XBF format | ||||
Description | XBF files with PMI saved in the OCCT 7.6 and before can't be open correctly in the 7.6.2 and above. The first reason is changing of label's numeration in the XCAFDoc_Dimension. XBF document should be versioned to have ability to upgrade the input XBF document to the working version. | ||||
Steps To Reproduce | XOpen pmi_old7_6.xbf D1 vinit V_old XDisplay D1 V_old PMIimport -doc D1 XOpen pmi_new_7_6-2.xbf D2 vinit V_new XDisplay D2 V_new PMIimport -doc D2 | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde bug33011 | ||||
|
2022-06-09_17-00-48.png (87,596 bytes) 2022-06-09_16-58-53.png (38,088 bytes) 2022-06-09_17-00-04.png (91,601 bytes) test.zip (1,629,101 bytes) |
|
@dpasukhi > XBF files with PMI saved in the OCCT 7.6 and before can't be open correctly in the 7.6.2 and above. > The first reason is changing of label's numeration in the XCAFDoc_Dimension. Could you please link an issue causing this change? |
|
#32096 cannot be considered as an issue, as it is not merged into OCCT 7.6.2 (hence, 7.6.2 vs 7.6.0 is no different in this) |
|
Branch CR33011 has been created by dpasukhi. SHA-1: 71fb91b3ae5b446a2d2c3b1de09f31ae5014781d Detailed log of new commits: Author: dpasukhi Date: Tue Jun 28 16:10:13 2022 +0300 0033011: Data Exchange - Backward compatibility XBF format Fixed problem with moving the attribute position. Made the same positions as version 7.5 with adding to the end. |
|
Branch CR33011 has been updated forcibly by dpasukhi. SHA-1: 780d3ed2f8722daa6a6f0350532c9266ad258dda |
|
Branch CR33011 has been updated forcibly by dpasukhi. SHA-1: 711120d98dd44e73c9d29bf55fbf830ab8fd8ddc |
|
Dear msv, please review CR33011 There is a fixing regression after #32096. The new Dimension attribute was moved to the end. New test cases was create to check the label presentation position ( 0:1:4:n:15) All tests are OK, no regressions, see: http://jenkins-test-occt.nnov.opencascade.com/view/CR33011-master-dpasukhi/view/COMPARE/ |
|
It is needed to rebase this branch on CR29854. |
|
Branch CR33011 has been updated forcibly by dpasukhi. SHA-1: a9211bfe08262b8e4208c6d9874a09482ca4bbb4 |
|
Dear msv, please review CR33011. Branch has been rebased. |
|
For integration: occt - CR33011 products - none |
|
Combination - OCCT branch : IR-2022-07-01 master SHA - e01ce0cd52b37150679c833d1db2cc5edd620341 e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-07-01 SHA - 78f14e59f6cde821eed22399cb05bb1295820b58 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18877.730000000698 / 18881.360000000743 [-0.02%] Products Total CPU difference: 11831.730000000112 / 11827.420000000122 [+0.04%] Windows-64-VC14: OCCT Total CPU difference: 20719.265625 / 20729.6875 [-0.05%] Products Total CPU difference: 13368.265625 / 13360.71875 [+0.06%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Combination - OCCT branch : IR-2022-07-08 master SHA - changes and them, and you can discard any commits you make in this 33c8a72788661285860902f261062e39f32a2d46 changes and them, and you can discard any commits you make in this e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-07-08 SHA - 79a687f1cd4081ec53ec08c201360e89fce62abc was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18685.930000000586 / 18908.870000000694 [-1.18%] Products Total CPU difference: 11796.890000000125 / 11832.130000000114 [-0.30%] Windows-64-VC14: OCCT Total CPU difference: 20784.828125 / 20752.59375 [+0.16%] Products Total CPU difference: 13361.3125 / 13368.90625 [-0.06%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33011 has been deleted by mnt. SHA-1: a9211bfe08262b8e4208c6d9874a09482ca4bbb4 |
occt: master 4f53e7b3 2022-06-28 16:10:13 Committer: smoskvin Details Diff |
0033011: Data Exchange - Backward compatibility XBF format Fixed problem with moving the attribute position. Made the same positions as version 7.5 with adding to the end. |
Affected Issues 0033011 |
|
mod - src/XCAFDoc/XCAFDoc_Dimension.cxx | Diff File | ||
mod - tests/bugs/step/bug32731 | Diff File | ||
add - tests/bugs/xde/bug33011 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-06-09 17:04 | dpasukhi | New Issue | |
2022-06-09 17:04 | dpasukhi | Assigned To | => gka |
2022-06-09 17:04 | dpasukhi | Note Added: 0108943 | |
2022-06-09 17:04 | dpasukhi | File Added: 2022-06-09_17-00-48.png | |
2022-06-09 17:04 | dpasukhi | File Added: 2022-06-09_16-58-53.png | |
2022-06-09 17:04 | dpasukhi | File Added: 2022-06-09_17-00-04.png | |
2022-06-09 17:04 | dpasukhi | File Added: test.zip | |
2022-06-09 17:05 | dpasukhi | Description Updated | |
2022-06-09 17:27 |
|
Priority | normal => immediate |
2022-06-09 17:27 |
|
Severity | major => block |
2022-06-09 17:27 |
|
Product Version | => 7.6.0 |
2022-06-09 17:49 | kgv | Note Added: 0108944 | |
2022-06-09 17:53 | kgv | Note Added: 0108945 | |
2022-06-10 11:13 | kgv | Product Version | 7.6.0 => 7.7.0 |
2022-06-10 11:13 | kgv | Target Version | 7.6.3 => 7.7.0 |
2022-06-10 11:13 | kgv | Steps to Reproduce Updated | |
2022-06-28 16:10 | git | Note Added: 0109347 | |
2022-06-28 16:52 | git | Note Added: 0109350 | |
2022-06-28 22:00 | git | Note Added: 0109352 | |
2022-06-29 11:26 | dpasukhi | Status | new => resolved |
2022-06-29 11:26 | dpasukhi | Note Added: 0109365 | |
2022-06-29 12:48 | msv | Note Added: 0109371 | |
2022-06-29 12:48 | msv | Assigned To | gka => dpasukhi |
2022-06-29 12:48 | msv | Status | resolved => assigned |
2022-06-30 11:58 | git | Note Added: 0109415 | |
2022-07-01 13:49 | dpasukhi | Assigned To | dpasukhi => msv |
2022-07-01 13:49 | dpasukhi | Status | assigned => resolved |
2022-07-01 13:49 | dpasukhi | Note Added: 0109451 | |
2022-07-01 17:32 | msv | Assigned To | msv => bugmaster |
2022-07-01 17:32 | msv | Status | resolved => reviewed |
2022-07-01 17:32 | msv | Note Added: 0109461 | |
2022-07-02 15:18 | bugmaster | Note Added: 0109470 | |
2022-07-07 14:40 | dpasukhi | Test case number | => bugs xde bug33011 |
2022-07-10 11:22 | smoskvin | Status | reviewed => tested |
2022-07-10 11:22 | smoskvin | Note Added: 0109712 | |
2022-07-10 12:03 | smoskvin | Changeset attached | => occt master 4f53e7b3 |
2022-07-10 12:03 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2022-07-10 12:03 | dpasukhi | Status | tested => verified |
2022-07-10 12:03 | dpasukhi | Resolution | open => fixed |
2022-07-10 12:09 | git | Note Added: 0109738 |