0033011: Data Exchange - Backward compatibility XBF format

Fixed problem with moving the attribute position.
Made the same positions as version 7.5 with adding to the end.